# zasm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  zasm.code-workspace
cmake/: prelude.cmake  tools.cmake
code/include/zasm/: commands.h  commands.inl  config.h  zasm.h
code/sources/: zasm.cpp
